--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-loader": "6.2.5",
     "babel-preset-es2015": "6.16.0",
     "eslint": "3.7.1",
+    "json": "9.0.4",
     "soundfont-player": "0.10.5",
     "tone": "0.8.0",
     "travis-after-all": "1.4.4",
