--- a/package.json
+++ b/package.json
@@ -33,7 +33,5 @@
     "travis-after-all": "1.4.4",
     "webpack": "1.13.2"
   },
-  "dependencies": {
-    "vocoder": "^0.1.1"
-  }
+  "dependencies": {}
 }
