--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "babel-core": "6.17.0",
     "babel-eslint": "7.0.0",
     "babel-loader": "6.2.5",
-    "babel-preset-es2015": "6.16.0",
     "eslint": "3.7.1",
     "json": "9.0.4",
     "minilog": "^3.0.1",
@@ -33,5 +32,7 @@
     "travis-after-all": "1.4.4",
     "webpack": "1.13.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "startaudiocontext": "^1.2.0"
+  }
 }
