--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "scratch-audio",
   "version": "0.1.0",
   "description": "audio engine for scratch 3.0",
-  "main": "dist.js",
+  "main": "./src/index.js",
   "scripts": {
     "test": "npm run lint && npm run build",
     "build": "webpack --bail",
@@ -20,6 +20,11 @@
     "url": "https://github.com/LLK/scratch-audio/issues"
   },
   "homepage": "https://github.com/LLK/scratch-audio#readme",
+  "dependencies": {
+    "minilog": "^3.0.1",
+    "soundfont-player": "0.10.5",
+    "tone": "0.8.0"
+  },
   "devDependencies": {
     "babel-core": "6.17.0",
     "babel-eslint": "7.0.0",
@@ -27,11 +32,7 @@
     "babel-preset-es2015": "6.16.0",
     "eslint": "3.7.1",
     "json": "9.0.4",
-    "minilog": "^3.0.1",
-    "soundfont-player": "0.10.5",
-    "tone": "0.8.0",
     "travis-after-all": "1.4.4",
     "webpack": "1.13.2"
-  },
-  "dependencies": {}
+  }
 }
