--- a/package.json
+++ b/package.json
@@ -21,17 +21,16 @@
   },
   "homepage": "https://github.com/LLK/scratch-audio#readme",
   "devDependencies": {
-    "babel-core": "6.22.1",
-    "babel-eslint": "7.1.1",
-    "babel-loader": "6.2.10",
-    "babel-preset-es2015": "6.22.0",
-    "eslint": "3.14.1",
-    "json": "9.0.4",
+    "babel-core": "^6.24.1",
+    "babel-eslint": "^7.2.2",
+    "babel-loader": "^6.4.1",
+    "babel-preset-es2015": "^6.24.1",
+    "eslint": "^3.19.0",
+    "json": "^9.0.6",
     "minilog": "^3.0.1",
     "soundfont-player": "0.10.5",
     "tone": "0.9.0",
-    "travis-after-all": "1.4.4",
-    "webpack": "2.2.1"
-  },
-  "dependencies": {}
+    "travis-after-all": "^1.4.4",
+    "webpack": "2.4.0"
+  }
 }
