--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.24.1",
     "eslint": "^3.19.0",
+    "eslint-config-scratch": "^3.1.0",
     "json": "^9.0.6",
     "minilog": "^3.0.1",
     "soundfont-player": "0.10.5",
