--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "json": "^9.0.6",
     "minilog": "^3.0.1",
     "soundfont-player": "0.10.5",
+    "startaudiocontext": "1.2.1",
     "travis-after-all": "^1.4.4",
     "webpack": "2.4.0"
   }
