--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "audio-context": "1.0.1",
     "babel-core": "^6.24.1",
     "babel-eslint": "^7.2.2",
-    "babel-loader": "^6.4.1",
+    "babel-loader": "^7.1.4",
     "babel-preset-es2015": "^6.24.1",
     "eslint": "^3.19.0",
     "eslint-config-scratch": "^3.1.0",
@@ -33,6 +33,7 @@
     "soundfont-player": "0.10.5",
     "startaudiocontext": "1.2.1",
     "travis-after-all": "^1.4.4",
-    "webpack": "2.4.0"
+    "webpack": "^4.8.0",
+    "webpack-cli": "^2.0.15"
   }
 }
