--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "babel-core": "^6.24.1",
     "babel-eslint": "^7.2.2",
     "babel-loader": "^7.1.4",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-env": "^1.6.1",
     "eslint": "^3.19.0",
     "eslint-config-scratch": "^3.1.0",
     "json": "^9.0.6",
