--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
   "dependencies": {
     "audio-context": "1.0.1",
     "minilog": "^3.0.1",
-    "startaudiocontext": "1.2.1",
-    "tap": "^12.0.1"
+    "startaudiocontext": "1.2.1"
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
@@ -37,6 +36,7 @@
     "json": "^9.0.6",
     "travis-after-all": "^1.4.4",
     "webpack": "^4.8.0",
-    "webpack-cli": "^2.0.15"
+    "webpack-cli": "^2.0.15",
+    "tap": "^12.0.1"
   }
 }
