--- a/package.json
+++ b/package.json
@@ -33,8 +33,9 @@
     "babel-preset-env": "^1.6.1",
     "eslint": "^3.19.0",
     "eslint-config-scratch": "^3.1.0",
+    "tap": "^12.0.1",
+    "web-audio-test-api": "^0.5.2",
     "webpack": "^4.8.0",
-    "webpack-cli": "^2.0.15",
-    "tap": "^12.0.1"
+    "webpack-cli": "^2.0.15"
   }
 }
