--- a/package.json
+++ b/package.json
@@ -1,41 +1,41 @@
 {
-  "name": "scratch-audio",
-  "version": "0.1.0",
-  "description": "audio engine for scratch 3.0",
-  "main": "dist.js",
-  "browser": "./src/index.js",
-  "scripts": {
-    "test": "npm run lint && npm run tap && npm run build",
-    "build": "webpack --bail",
-    "watch": "webpack --watch",
-    "lint": "eslint .",
-    "tap": "tap test/effects/*.js test/*.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/LLK/scratch-audio.git"
-  },
-  "author": "Massachusetts Institute of Technology",
-  "license": "BSD-3-Clause",
-  "bugs": {
-    "url": "https://github.com/LLK/scratch-audio/issues"
-  },
-  "homepage": "https://github.com/LLK/scratch-audio#readme",
-  "dependencies": {
-    "audio-context": "1.0.1",
-    "minilog": "^3.0.1",
-    "startaudiocontext": "1.2.1"
-  },
-  "devDependencies": {
-    "babel-core": "6.26.3",
-    "babel-eslint": "7.2.3",
-    "babel-loader": "7.1.5",
-    "babel-preset-env": "1.7.0",
-    "eslint": "3.19.0",
-    "eslint-config-scratch": "3.1.0",
-    "tap": "12.7.0",
-    "web-audio-test-api": "0.5.2",
-    "webpack": "4.46.0",
-    "webpack-cli": "3.3.12"
-  }
+    "name": "wiingy-audio",
+    "version": "0.1.0",
+    "description": "audio engine for scratch 3.0",
+    "main": "dist.js",
+    "browser": "./src/index.js",
+    "scripts": {
+        "test": "npm run lint && npm run tap && npm run build",
+        "build": "webpack --bail",
+        "watch": "webpack --watch",
+        "lint": "eslint .",
+        "tap": "tap test/effects/*.js test/*.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/LLK/scratch-audio.git"
+    },
+    "author": "Ritesh Sapata",
+    "license": "BSD-3-Clause",
+    "bugs": {
+        "url": "https://github.com/LLK/scratch-audio/issues"
+    },
+    "homepage": "https://github.com/LLK/scratch-audio#readme",
+    "dependencies": {
+        "audio-context": "1.0.1",
+        "minilog": "^3.0.1",
+        "startaudiocontext": "1.2.1"
+    },
+    "devDependencies": {
+        "babel-core": "6.26.3",
+        "babel-eslint": "7.2.3",
+        "babel-loader": "7.1.5",
+        "babel-preset-env": "1.7.0",
+        "eslint": "3.19.0",
+        "eslint-config-scratch": "3.1.0",
+        "tap": "12.7.0",
+        "web-audio-test-api": "0.5.2",
+        "webpack": "4.46.0",
+        "webpack-cli": "3.3.12"
+    }
 }
