changed package file

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "wiingy-audio",
-    "version": "0.1.0",
+    "version": "0.1.1",
     "description": "audio engine for scratch 3.0",
     "main": "dist.js",
     "browser": "./src/index.js",
@@ -13,14 +13,14 @@
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/LLK/scratch-audio.git"
+        "url": "git+https://github.com/RIT3shSapata/wiingy-audio"
     },
     "author": "Ritesh Sapata",
     "license": "BSD-3-Clause",
     "bugs": {
-        "url": "https://github.com/LLK/scratch-audio/issues"
+        "url": "https://github.com/RIT3shSapata/wiingy-audio/issues"
     },
-    "homepage": "https://github.com/LLK/scratch-audio#readme",
+    "homepage": "https://github.com/RIT3shSapata/wiingy-audio#readme",
     "dependencies": {
         "audio-context": "1.0.1",
         "minilog": "^3.0.1",
