--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "babel-preset-env": "1.7.0",
     "eslint": "3.19.0",
     "eslint-config-scratch": "3.1.0",
+    "json": "9.0.6",
     "tap": "12.7.0",
     "web-audio-test-api": "0.5.2",
     "webpack": "4.46.0",
