--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "startaudiocontext": "1.2.1"
   },
   "devDependencies": {
+    "@commitlint/cli": "18.4.3",
+    "@commitlint/config-conventional": "18.4.3",
     "babel-core": "6.26.3",
     "babel-eslint": "10.1.0",
     "babel-loader": "7.1.5",
